<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.redboxgames.redlyrics.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_lyrics"
        android:name="net.redboxgames.redlyrics.ui.lyrics.LyricsFragment"
        android:label="@string/title_lyrics"
        tools:layout="@layout/fragment_lyrics" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="net.redboxgames.redlyrics.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>
